# novel-proofer

./: .env.example  .env.test.example  .gitattributes  .gitignore  .gitmessage  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt  start.bat  start.sh  tailwind.config.js
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  general.yml  suggestion.yml
.github/workflows/: ci.yml  issue-title-guard.yml
docs/: ARCHITECTURE.md  DEVELOP.md  PERFORMANCE.md  STATE_MACHINE.md  TESTCASES.md  USAGE.md  WORKFLOW.md  WORKFLOW_V2.md
novel_proofer/: __init__.py  api.py  background.py  converters.py  dotenv_store.py  env.py  jobs.py  logging_setup.py  models.py  paths.py  runner.py  server.py  states.py
novel_proofer/formatting/: chunking.py  config.py  fixer.py  merge.py  rules.py
openspec/: project.md
templates/: index.html
tests/: conftest.py  smoke_cancel_job.py  smoke_cleanup_job.py  smoke_debug_dir_retention.py  smoke_pause_resume_job.py  smoke_split_504.py  smoke_status_chunks.py  smoke_test.py  test_api_endpoints.py  test_formatting_chunking.py  test_formatting_fixer.py  test_formatting_rules.py  test_jobs_store.py  test_llm_client.py  test_llm_corpus_golden.py  test_pipeline_corpus_golden.py  test_runner_blank_chunk.py  test_runner_chunk_newlines.py  test_runner_extra_coverage.py  test_runner_jobs_logs.py  test_runner_run_job.py  test_server_endpoints.py  test_server_utils.py  test_think_filter.py
tools/: setup-git.ps1  setup-git.sh
(+79 files in other folders)
