[project]
name = "novel-proofer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.19",
  "pytest>=9",
  "pytest-cov>=7",
  "ruff>=0.14",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  "output",
  "openspec",
  ".venv",
  ".pytest_cache",
  ".playwright-mcp",
  ".serena",
  ".shared",
  ".claude",
  ".gemini",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501", # handled by formatter
  "B008", # FastAPI/Starlette dependency injection uses call expressions in defaults
  "RUF001", # allow confusable unicode (Chinese punctuation etc.)
  "RUF002", # allow confusable unicode in docstrings
  "RUF003", # allow confusable unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["novel_proofer", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
